syntax = "proto2";

import "StageInFile.proto";
import "RunJob.proto";

service Agent {
    rpc StageInFiles(StageInFilesRequest) returns (StageInFilesResponse);
    rpc RunJob(RunJobRequest) returns (RunJobResponse);
}

